Suoni, NaN, start come id
Reinseriti i suoni ai tasti,
Reinserito start come id
Il controllo su NaN nella divisione ora funziona

--- a/p101viewport.html
+++ b/p101viewport.html
@@ -170,7 +170,7 @@
        
        <div id="blocco_tasti2">
        
-            <span class="start">START</span>
+            <span id="start">START</span>
        </div>
        <div id="blocco_tasti3">
 
