--- a/p101viewport.html
+++ b/p101viewport.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        
         <!-- Include the jQuery library -->
-       <script src="http://code.jquery.com/jquery-2.2.2.min.js"
+       <script src="https://code.jquery.com/jquery-2.2.2.min.js"
 			  integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
 			  crossorigin="anonymous"></script>
        
